Arregla errores, vincula con la BD y valida los campos

--- a/presentacion/presentacion.csproj
+++ b/presentacion/presentacion.csproj
@@ -34,6 +34,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -123,6 +124,9 @@
       <Project>{a02d1df6-5d53-4333-a76c-c639b8b65259}</Project>
       <Name>product</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\upload-design-layer.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
